--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=emploi-du-temps
+
+server.port=9191
+
+spring.datasource.url=jdbc:mysql://localhost:3306/emploiDuTemps
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+##(create, update, create-drop, validate)
+spring.jpa.hibernate.ddl-auto=update
