--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 ##(create, update, create-drop, validate)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= create
+
+api.prefix = /api/v1
+
